--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -1494,3 +1494,22 @@ font-weight:500;
 .services_popup_button.active {
     background-color:gray;
 }
+
+.forbiddenPopup {
+    position:fixed;
+    width:100%;
+    height:100%;
+    top:0;
+    left:0;
+    background-color:white;
+}
+
+.forbiddenPopup>div {
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+    color:black;
+    font-size:30px;
+    text-align: center;
+}
