--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -1497,8 +1497,8 @@ font-weight:500;
 
 .forbiddenPopup {
     position:fixed;
-    width:100%;
-    height:100%;
+    width:100vw;
+    height:100vh;
     top:0;
     left:0;
     background-color:white;
