--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -1502,6 +1502,7 @@ font-weight:500;
     top:0;
     left:0;
     background-color:white;
+    z-index:99999999999999999999999999999;
 }
 
 .forbiddenPopup>div {
