--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -4142,3 +4142,34 @@ input[type="number"]::-webkit-inner-spin-button {
     font-size:14px;
     user-select:none;
 }
+
+.notify_calendly {
+    position:fixed;
+    width:100%;
+    height:100%;
+    top:0;
+    left:0;
+    background-color: #f3f4f6;
+}
+
+.notify_calendly>div {
+    display:flex;
+    flex-direction:column;
+    row-gap:16px;
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+}
+
+.notify_calendly>div>img {
+    width:300px;
+}
+
+.notify_calendly_text {
+    text-align:center;
+    font-family: 'inter', serif;
+    font-weight:500;
+    font-size:16px;
+    line-height:24px;
+}
