--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -407,6 +407,8 @@
     margin: 0 16px;
     padding:16px;
     color:white;
+    width:100%;
+    box-sizing: border-box;
 }
 
 .feed_consultation_photos {
