--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -1249,6 +1249,7 @@ font-weight:500;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 2;
     margin-bottom:32px;
+    word-break: break-all;
 }
 
 .webinar_links_zoom_link>a {
