--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -4218,3 +4218,13 @@ input[type="number"]::-webkit-inner-spin-button {
     font-size:16px;
     line-height:24px;
 }
+
+.loading {
+    position:fixed;
+    width:100%;
+    height:100%;
+    left:0;
+    top:0;
+    background-color: #F3F4F6;
+    transition:0.2s;
+}
