--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -96,6 +96,7 @@
     display:flex;
     height:fit-content;
     text-decoration: none;
+    color:black !important;
 }
 
 .nav>div>div.active, .nav>div>a.active {
