--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -4232,3 +4232,48 @@ input[type="number"]::-webkit-inner-spin-button {
     transition:0.2s;
     z-index: 999999999;
 }
+
+.notification_container {
+    display:flex;
+    flex-direction:column-reverse;
+    position:fixed;
+    left:50%;
+    transform: translateX(-50%);
+    z-index:999999;
+}
+
+.notification_container>div {
+    transition: none;
+    visibility: hidden;
+    height: 0;
+}
+
+.notification {
+    width:50%;
+    display:flex;
+    flex-direction:row;
+    padding:10px;
+    border-radius:10px;
+    color:white;
+    column-gap:10px;
+    margin-top:10px;
+}
+
+.notification.success {
+    background-color: #4caf50;
+}
+.notification.error {
+    background-color: #f44336;
+}
+
+.notification>i {
+    font-size:24px;
+    margin:auto 0;
+}
+
+.notification>div {
+    text-align:left;
+    margin:auto 0;
+    font-size:14px;
+    font-weight:500;
+}
