--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -584,6 +584,7 @@
     font-size:18px;
     line-height:24px;
     transition:0.2s;
+    box-sizing: border-box;
 }
 
 .form>form>button {
@@ -4260,6 +4261,7 @@ input[type="number"]::-webkit-inner-spin-button {
     color:white;
     column-gap:10px;
     margin-top:10px;
+    box-shadow: 0 1px 4px rgba(0,0,0,0.4);
 }
 
 .notification.success {
