--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -64,6 +64,7 @@
     row-gap:8px;
     padding:16px;
     position:relative;
+    min-width:100%;
 }
 
 .main>.nav {
@@ -86,6 +87,7 @@
 .nav>div {
     display:flex;
     column-gap:8px;
+    width: fit-content;
 }
 
 .nav>div>div, .nav>div>a {
