--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -64,7 +64,8 @@
     row-gap:8px;
     padding:16px;
     position:relative;
-    min-width:100%;
+    width:100%;
+    overflow:hidden;
 }
 
 .main>.nav {
