--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -2244,15 +2244,15 @@ body.no-scroll {
 }
 
 .admin_main_tasks_el_description {
-    font-weight:300;
-    font-size:14px;
-    color:rgba(255, 255, 255, 0.5);
-    display: -webkit-box;
-    max-height:80px;
-    overflow:hidden;
-    -webkit-line-clamp: 3;  /* Ограничение до 3 строк */
-    -webkit-box-orient: vertical;
-    text-overflow: ellipsis;
+    font-weight:300 !important;
+    font-size:14px !important;
+    color:rgba(255, 255, 255, 0.5) !important;
+    display: -webkit-box !important;
+    max-height:80px !important;
+    overflow:hidden !important;
+    -webkit-line-clamp: 3 !important;  /* Ограничение до 3 строк */
+    -webkit-box-orient: vertical !important;
+    text-overflow: ellipsis !important;
 }
 
 .admin_main_tasks_el_edit {
