--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -3757,6 +3757,7 @@ input[type="number"]::-webkit-inner-spin-button {
     padding:10px;
     display:flex;
     flex-direction:column;
+    flex-wrap: wrap;
 }
 
 .admin_addproduct_main>div>div>div>div>h3 {
